tests/parse_print/random_perturb/set01/delete-07/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-07/delete-07.essence:3:13:
unexpected (
expecting comma, end of input, rest of statement, or statement
    find x : et (size 2) of int(1..3)
                ^